// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StepPageHeader /> should render correctly a consultationStep 1`] = `
<ContainerConstructor
  componentRef={null}
  step={
    Object {
      "$refType": null,
      "body": "I am a body",
      "endAt": "",
      "id": "1",
      "startAt": "",
      "status": "OPENED",
      "timeless": false,
      "title": "I am a title",
      "type": "consultation",
    }
  }
/>
`;

exports[`<StepPageHeader /> should render correctly a questionnaireStep 1`] = `
<ContainerConstructor
  componentRef={null}
  step={
    Object {
      "$refType": null,
      "body": "I am a body",
      "endAt": "",
      "id": "1",
      "startAt": "",
      "status": "OPENED",
      "timeless": false,
      "title": "I am a title",
      "type": "questionnaire",
    }
  }
/>
`;

exports[`<StepPageHeader /> should render correctly a selectionStep 1`] = `
<ContainerConstructor
  componentRef={null}
  step={
    Object {
      "$refType": null,
      "body": "I am a body",
      "endAt": "",
      "id": "1",
      "startAt": "",
      "status": "OPENED",
      "timeless": false,
      "title": "I am a title",
      "type": "selection",
      "votable": true,
      "voteThreshold": 1,
    }
  }
/>
`;
